// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureProperties should render 1`] = `
<EmotionCssPropInternal
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="table"
  className="eui-yScrollWithShadows"
>
  <tbody>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td>
        foobar1
      </td>
      <td />
    </MapFeatureTooltipRow>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td>
        foobar2
      </td>
      <td />
    </MapFeatureTooltipRow>
  </tbody>
</EmotionCssPropInternal>
`;

exports[`FeatureProperties should show error message if unable to load tooltip content 1`] = `
<EuiCallOut
  color="danger"
  iconType="warning"
  size="s"
  title="Unable to load tooltip content"
>
  <p>
    Simulated load properties error
  </p>
</EuiCallOut>
`;

exports[`FeatureProperties should show filter button for filterable properties 1`] = `
<EmotionCssPropInternal
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="table"
  className="eui-yScrollWithShadows"
>
  <tbody>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td>
        foobar1
      </td>
      <td>
        <EuiButtonEmpty
          aria-label="Filter on property"
          data-test-subj="mapTooltipCreateFilterButton"
          onClick={[Function]}
          size="xs"
          title="Filter on property"
        >
          <EuiIcon
            type="filter"
          />
        </EuiButtonEmpty>
      </td>
    </MapFeatureTooltipRow>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td>
        foobar2
      </td>
      <td />
    </MapFeatureTooltipRow>
  </tbody>
</EmotionCssPropInternal>
`;

exports[`FeatureProperties should show view actions button when there are available actions 1`] = `
<EmotionCssPropInternal
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="table"
  className="eui-yScrollWithShadows"
>
  <tbody>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td>
        foobar1
      </td>
      <td
        className="mapFeatureTooltip_actionsRow"
      >
        <span>
          <EuiButtonEmpty
            aria-label="Filter on property"
            data-test-subj="mapTooltipCreateFilterButton"
            onClick={[Function]}
            size="xs"
            title="Filter on property"
          >
            <EuiIcon
              type="filter"
            />
          </EuiButtonEmpty>
          <EuiButtonEmpty
            aria-label="View filter actions"
            data-test-subj="mapTooltipMoreActionsButton"
            onClick={[Function]}
            size="xs"
            title="View filter actions"
          >
            <EuiIcon
              type="arrowRight"
            />
          </EuiButtonEmpty>
        </span>
      </td>
    </MapFeatureTooltipRow>
    <MapFeatureTooltipRow
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td>
        foobar2
      </td>
      <td />
    </MapFeatureTooltipRow>
  </tbody>
</EmotionCssPropInternal>
`;
